[gd_scene load_steps=6 format=3 uid="uid://b6sg1b6ucnje7"]

[ext_resource type="Script" path="res://enemies/green/green.gd" id="1_t7t5q"]
[ext_resource type="AudioStream" uid="uid://e7g5lfly8s3g" path="res://audio/bulletsfx.wav" id="2_kbnva"]

[sub_resource type="Gradient" id="Gradient_v453m"]
offsets = PackedFloat32Array(0, 0.556291, 1)
colors = PackedColorArray(0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_1ikm5"]
radius = 56.0803

[sub_resource type="CircleShape2D" id="CircleShape2D_ynvg1"]
radius = 53.0094

[node name="green" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_t7t5q")

[node name="body" type="CPUParticles2D" parent="."]
amount = 100
local_coords = true
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 300.0
initial_velocity_max = 300.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
orbit_velocity_min = 2.0
orbit_velocity_max = 2.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 15.0
scale_amount_max = 15.0
color_ramp = SubResource("Gradient_v453m")

[node name="eye_bottom" type="CPUParticles2D" parent="body"]
position = Vector2(-1, 16)
amount = 10
explosiveness = 0.75
local_coords = true
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
orbit_velocity_min = 1.0
orbit_velocity_max = 1.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 5.0
scale_amount_max = 5.0

[node name="eye_top" type="CPUParticles2D" parent="body"]
position = Vector2(1, -16)
amount = 10
explosiveness = 0.75
local_coords = true
direction = Vector2(-1, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
orbit_velocity_min = 1.0
orbit_velocity_max = 1.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 5.0
scale_amount_max = 5.0

[node name="playerdeath" type="Area2D" parent="." groups=["enemy", "enemy_body"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerdeath"]
visible = false
shape = SubResource("CircleShape2D_1ikm5")

[node name="GunTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="green_bulletsfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_kbnva")
volume_db = -5.0
pitch_scale = 2.0
max_distance = 1500.0

[node name="spawnsfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_kbnva")
volume_db = -5.0
pitch_scale = 3.0
max_distance = 1000.0

[node name="wall-hitbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_ynvg1")

[connection signal="area_entered" from="playerdeath" to="." method="_on_playerdeath_area_entered"]
